@@ -8,10 +8,12 @@ $tmp = array(
 	'tpl.mSearch2.ac' => 'msearch2.ac',
 	'tpl.mFilter2.outer' => 'mfilter2.outer',
 	'tpl.mFilter2.filter.outer' => 'mfilter2.filter.outer',
+	'tpl.mFilter2.filter.outer.select' => 'mfilter2.filter.outer.select',
 	'tpl.mFilter2.filter.checkbox' => 'mfilter2.filter.checkbox',
 	'tpl.mFilter2.filter.number' => 'mfilter2.filter.number',
 	'tpl.mFilter2.filter.radio' => 'mfilter2.filter.radio',
-	'tpl.mFilter2.filter.slider' => 'mfilter2.filter.slider'
+	'tpl.mFilter2.filter.slider' => 'mfilter2.filter.slider',
+	'tpl.mFilter2.filter.select' => 'mfilter2.filter.select',
 );
 
 foreach ($tmp as $k => $v) {
