@@ -1,0 +1,7 @@
+<fieldset id="mse2_[[+table]][[+delimeter]][[+filter]]">
+	<h4>[[%mse2_filter_[[+table]]_[[+filter]]]]</h4>
+	<select name="[[+table]][[+delimeter]][[+filter]]" id="[[+table]][[+delimeter]][[+filter]]_0">
+		<option value="" selected>[[%mse2_select]]</option>
+		[[+rows]]
+	</select>
+</fieldset>
